2014-03-31  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-edwards.c (eddsa_sign_25519): Rename and API change.

	* src/openpgp-do.c (gpg_do_load_prvkey, gpg_do_delete_prvkey)
	(gpg_do_write_prvkey, gpg_do_public_key, gpg_do_keygen): Follow
	the change of PRVKEY_DATA and KEY_DATA.

	* src/flash.c (key_available_at): New.
	(flash_init): Initilize KD.

	* src/gnuk.h (struct prvkey_data): Remove member KEY_ADDR.
	(struct key_data): Addd member KEY_ADDR.

	* src/openpgp-do.c (gpg_do_keygen): Bug fix.  Reset the signature
	counter when new key is generated.

	* src/flash.c (flash_key_alloc): Change API, supply KK.

2014-03-29  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-edwards.c (point_double, point_add): Rename.
	(mod25519_reduce): New.

2014-03-28  Niibe Yutaka  <gniibe@fsij.org>

	* misc/t-eddsa.c (main): Update for new API of eddsa_25519.

	* src/ecc-edwards.c (compute_kG_25519): Tune for 252-bit.
	(eddsa_25519): Public key should be provided by caller.
	(eddsa_public_key_25519): New.

2014-03-27  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-edwards.c (ed_add_25638): Remove the third argument.
	(compute_kG_25519): The curve is complete, we don't need to avoid
	identity element as NIST curve or secp256k1 curve.
	(eddsa_25519): Change the API, with A and the seed.

2014-03-26  Niibe Yutaka  <gniibe@fsij.org>

	* src/mod25638.c (mod25638_reduce): New.
	(mod25638_mul, mod25638_sqr): Use mod25638_reduce.

	* src/ecc-edwards.c (ptc_to_ac_25519): No need to subtract p25519.

2014-03-25  Niibe Yutaka  <gniibe@fsij.org>

	* misc/t-eddsa.c: New.

	* src/ecc-edwards.c (bnX_mul_C, mod_reduce_M): New.
	(eddsa_25519): New.

2014-03-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc-edwards.c (ed_add_25638): Fix for X == A.
	(main): Compute pre-computed tables.
	(precomputed_KG, precomputed_2E_KG): Add.
	(compute_kG_25519): New.

2014-03-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/bn.c (bn256_add): Fix for X == B.
	(bn256_sub): Likewise.

	* src/ecc-edwards.c: New.
